@@ -105,7 +105,9 @@ function service_submit_staticpages($args, &$output, &$svc_msg)
         }
     }
 
-    $args['sp_uid'] = $_USER['uid'];
+    if ( empty($args['sp_uid']) ) {
+        $args['sp_uid'] = $_USER['uid'];
+    }
 
     if (empty($args['sp_title']) && !empty($args['title'])) {
         $args['sp_title'] = $args['title'];
@@ -120,7 +122,9 @@ function service_submit_staticpages($args, &$output, &$svc_msg)
         $args['sp_tid'] = $args['category'][0];
     }
 
-    $args['owner_id'] = $_USER['uid'];
+    if ( empty($args['owner_id']) ) {
+        $args['owner_id'] = $_USER['uid'];
+    }
 
     if (empty($args['group_id'])) {
         $args['group_id'] = SEC_getFeatureGroup('staticpages.edit', $_USER['uid']);
@@ -534,7 +538,6 @@ function service_get_staticpages($args, &$output, &$svc_msg)
             $output = DB_fetchArray ($result, false);
             // WE ASSUME $output doesn't have any confidential fields
 
-//            $_CONF['pagetitle'] = stripslashes ($output['sp_title']);
             $_CONF['pagetitle'] = $output['sp_title'];
 
         } else { // an error occured (page not found, access denied, ...)
